# hkvs_ca016_ros_wraper

./: README.md
src/hkvs/: CMakeLists.txt  README.diskdefines  package.xml
src/hkvs/cfg/: hkvs.cfg
src/hkvs/driver/Debian/: unload.sh
src/hkvs/driver/Redhat/: load.sh
src/hkvs/include/: MvCameraControl.h
src/hkvs/launch/: hkvs_pub.launch
src/hkvs/lib/: libMVGigEVisionSDK.so.3.0.0.7  libMvCameraControl.so.3.0.0.7
src/hkvs/logserver/: InstallServer.sh  Path.ini  RemoveServer.sh
src/hkvs/logserver/Debian/: MvLogServerd
src/hkvs/logserver/Redhat/: MvLogServerd
src/hkvs/msg/: down.msg  downyaw.msg  square.msg  vel.msg
src/hkvs/src/: ce.cpp  cfghkvs_sub.cpp  hkvs.cpp  hkvs_pub.cpp  hkvs_sub.cpp  image.cpp  main.cpp  mainKNN.cpp  tyj.cpp
src/hkvs/src/test/: 00.cpp
