<?xml version="1.0"?>
<package format="2">
  <name>hkvs</name>
  <version>0.0.0</version>
  <description>The hkvs package</description>

  <maintainer email="zhuge@todo.todo">zhuge</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <build_depend>message_generation</build_depend>
<build_export_depend>message_generation</build_export_depend>
<exec_depend>message_runtime</exec_depend>
   
   
 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
